--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -23,6 +23,7 @@ include: "rules/f1038_dists.smk"
 include: "rules/glutamates_dists.smk"
 include: "rules/plip.smk"
 
+
 pep_input = []
 plip_input = []
 for f in FOLDERS:
@@ -55,6 +56,12 @@ for f in FOLDERS:
         r17_input.append(f"results/{f}/glutamate_dists/glutamate_violins.png")
         r17_input.append(f"results/{f}/glutamate_dists/E981_E1044_R17_heatmap.png")
         r17_input.append(f"results/{f}/glutamate_dists/E981_E984_R17_heatmap.png")
+        r17_input.extend(
+            [
+                f"results/{f}/glutamate_dists/E981_{glu}_R17_heatmap.png"
+                for glu in GLUTAMATES
+            ]
+        )
         r17_clip_10ns_input.append(
             f"results/{f}/glutamate_dists/glutamate_violins_clip_10ns.png"
         )
@@ -98,10 +105,9 @@ rule clip_10ns_analysis:
         ),
 
 
-
 rule get_plip:
     """
     Specifically for running PLIP analysis
     """
     input:
-        plip_input
+        plip_input,
