added in specific residue rmsf plotting

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -98,6 +98,9 @@ rule all:
             "results/{folder}/protein/t33b_backbone_rmsd.png", folder=FOLDERS
         ),
         protein_rmsf=expand("results/{folder}/protein/t33b_rmsf.png", folder=FOLDERS),
+        protein_rmsf_specific=expand(
+            "results/{folder}/protein/t33b_rmsf_specific_resi.png", folder=FOLDERS
+        ),
         f1038_y993_heatmap=expand(
             "results/{folder}/f1038_dists/F1038_Y993_heatmap.png", folder=FOLDERS
         ),
@@ -129,7 +132,3 @@ rule get_plip:
     """
     input:
         plip_input,
-
-rule test_rmsf:
-    input:
-        "results/test/rmsf_test.png"
