--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -52,10 +52,10 @@ for f in FOLDERS:
         samples.loc[f, "k18_type"] == "K18Ac"
         and not samples.loc[f, "mutations"] == "N1039A"
     ):
-        k18ac_input.append(f"results/{f}/n1039_dists/N1039_dist_heatmap.png")
-        k18ac_input.append(f"results/{f}/n1039_dists/N1039_dist_kde.png")
+        k18ac_input.append(f"results/{f}/n1039_dists/N1039_k18ac_dist_heatmap.png")
+        k18ac_input.append(f"results/{f}/n1039_dists/N1039_k18ac_dist_kde.png")
         k18ac_clip_10ns_input.append(
-            f"results/{f}/n1039_dists/N1039_dist_kde_clip_10ns.png"
+            f"results/{f}/n1039_dists/N1039_k18ac_dist_kde_clip_10ns.png"
         )
         k18ac_input.append(f"results/{f}/y993_dists/Y993_dist_heatmap.png")
         k18ac_input.append(f"results/{f}/y993_dists/Y993_dist_kde.png")
@@ -68,6 +68,12 @@ for f in FOLDERS:
     if not samples.loc[f, "mutations"] == "N1039A":
         n1039_input.append(f"results/{f}/n1039_dihs/N1039_chi1_heatmap.png")
         n1039_input.append(f"results/{f}/n1039_dihs/N1039_chi1_hist.png")
+        n1039_input.extend(
+            [
+                f"results/{f}/n1039_dists/N1039_E981_{x}_dist_heatmap.png"
+                for x in ["OE1", "OE2"]
+            ]
+        )
 
 r17_input = []
 r17_clip_10ns_input = []
@@ -122,7 +128,8 @@ rule all:
             i=["1.5", "2.0"],
         ),
         za_bc_heatmap=expand(
-            "results/{folder}/za_bc_loop_dists/za_bc_loop_dist_heatmap.png", folder=FOLDERS
+            "results/{folder}/za_bc_loop_dists/za_bc_loop_dist_heatmap.png",
+            folder=FOLDERS,
         ),
         za_bc_kde=expand(
             "results/{folder}/za_bc_loop_dists/za_bc_loop_dist_kde.png", folder=FOLDERS
